--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -368,3 +368,64 @@ strong {
 .popular .course-item .btn-book:hover {
   background: var(--primery-color);
 }
+
+/*======feedback=====*/
+.feedback {
+  margin-top: 135px;
+  padding: 96px 0;
+  background: #2e2100;
+}
+.feedback-list {
+  display: flex;
+  overflow: hidden;
+}
+.feedback-item {
+  display: flex;
+  flex-shrink: 0;
+}
+.feedback-item .avatar {
+  width: 72px;
+  height: 72px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+.feedback-item .info .member-name {
+  margin-top: 18px;
+  font-family: var(--font-heading);
+  color: f7f7f7;
+  font-weight: 700;
+  font-size: 2.4rem;
+  line-height: 1.42;
+}
+.feedback .info .desc {
+  color: #bfbcb2;
+  margin-top: 4rem;
+  font-size: 1.4rem;
+  line-height: 1.86;
+}
+.feedback-item .dots {
+  gap: 6px;
+  display: flex;
+  margin-top: 28px;
+}
+.feedback-item .dot {
+  cursor: pointer;
+  height: 6px;
+  width: 6px;
+  border-radius: 50px;
+  background: #634700;
+}
+.feedback-item .dot.active {
+  background-color: var(--primery-color);
+  cursor: default;
+}
+.feedback-item .content {
+  width: 66%;
+  margin-left: auto;
+}
+.feedback-item blockquote {
+  color: #fff;
+  font-style: italic;
+  font-size: 2.6rem;
+  line-height: 1.54;
+}
