--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,9 +38,10 @@ a {
   line-height: 50px;
   background: #171100;
   border-radius: 999px;
-  color: aliceblue;
-  display: block;
+  color: #fff;
+  display: inline-block;
   padding: 0 16px;
+  text-align: center;
 }
 .btn:hover {
   opacity: 0.9;
@@ -369,7 +370,6 @@ strong {
   background: var(--primery-color);
 }
 
-/*======feedback=====*/
 /* =================feedback================== */
 .feedback {
   margin-top: 135px;
@@ -440,4 +440,43 @@ strong {
   font-size: 2.6rem;
   font-style: italic;
   line-height: 1.54;
+}
+/* =================features================== */
+.features {
+  margin-top: 135px;
+  padding: 65px 0;
+}
+.features .body {
+  display: flex;
+  justify-content: space-between;
+}
+.features .images {
+  display: flex;
+}
+.features .images img {
+  width: 270px;
+  height: 405px;
+  object-fit: cover;
+  border-radius: 16px;
+}
+.features .lower {
+  margin-top: 34px;
+}
+.features .content {
+  width: 41%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.features .desc {
+  color: #5f5b53;
+  margin-top: 16px;
+  font-size: 1.6rem;
+  line-height: 1.75;
+}
+.features .cta-btn {
+  margin-top: 32px;
+  width: 137px;
+  height: 50px;
+  background: var(--primery-color);
 }
