--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -494,3 +494,105 @@ strong {
   width: 470px;
   height: 440px;
 }
+
+/* =================blog================== */
+.blogs {
+  margin-top: 135px;
+  padding: 96px 0;
+  background: #fffcf4;
+}
+.blogs .blog-top {
+  text-align: center;
+}
+.blogs .blog-top .desc {
+  width: 448px;
+  margin: 16px auto 0;
+  color: #696262;
+  font-size: 1.6rem;
+  line-height: 1.75;
+}
+.blogs .blog-list {
+  overflow: hidden;
+  gap: 30px;
+  display: flex;
+  margin-top: 55px;
+}
+.blogs .item {
+  flex-shrink: 0;
+  width: calc(33.33% - 20px);
+  border-radius: 0 0 16px 16px;
+  background: #ffffff;
+}
+.blogs .item:hover {
+  box-shadow: 0px 16px 32px 0px #0000000d;
+}
+.blogs .thumb {
+  height: 254px;
+  object-fit: cover;
+  width: 100%;
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
+}
+.blogs .item .info {
+  padding: 20px 20px 28px;
+}
+.blogs .item .date {
+  padding-bottom: 12px;
+  position: relative;
+  color: #5f5b53;
+  display: inline-flex;
+  align-items: center;
+  font-size: 1.4rem;
+  line-height: 1.86;
+}
+.blogs .item .date::before {
+  margin-right: 4px;
+  content: "";
+  display: inline-block;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: var(--primery-color);
+}
+.blogs .item .date::after {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  content: "";
+  display: flex;
+  right: -27px;
+  height: 1px;
+  display: inline-block;
+  border-radius: 0.5px;
+  background: #e2dfda;
+}
+.blogs .item .title {
+  color: #171100;
+  margin-top: 12px;
+  font-size: 1.6rem;
+  line-height: 1.75;
+}
+.blogs .item .btn {
+  margin-top: 12px;
+  font-size: 1.4rem;
+}
+.blogs .item .btn:hover {
+  background: var(--primery-color);
+}
+.blogs .dots {
+  justify-content: center;
+  margin-top: 38px;
+  display: flex;
+  gap: 6px;
+}
+.blogs .dot {
+  width: 6px;
+  height: 6px;
+  border-radius: 50px;
+  background: #5f5b53;
+  cursor: pointer;
+}
+.blogs .dot.active {
+  background: var(--primery-color);
+  cursor: default;
+}
